--- a/privacy.policy.html
+++ b/privacy.policy.html
@@ -1,29 +1,9 @@
-App Privacy Policy Generator
-Generate a generic Privacy Policy and Terms & Conditions for your apps
-Built with heart by Nishant and contributors.
-
-TwitterDisclaimerGitHub stars
-
-
-While App Privacy Policy Generator is completely FREE, it takes money to keep it running and updated.
-If you are able to, then consider contributing by:
-
-Sponsoring me on Github 👨🏻‍💻
-Buying me a cup of ☕
-If you are unable to contribute with funds, consider sharing it with your friends: Twitter, Linkedin, Facebook, Reddit
-
-...or adding a review/comment in the project's GuestBook 🤗
-
-All Done!
-Now sit back and choose the type of document you want to generate:
-
-
-
-
-The accuracy of the generated privacy policy and terms & conditions on this website is not legally binding. Use at your own risk.
-
-Read the full Disclaimer here
-
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Privacy Policy</title>
+</head>
 
 Privacy Policy
 Bystryan built the Plinko Red app as a Free app. This SERVICE is provided by Bystryan at no cost and is intended for use as is.
@@ -87,3 +67,5 @@ This policy is effective as of 2023-11-05
 Contact Us
 
 If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at yaroslavlutsiv222@gmail.com.
+</body>
+</html>
