--- a/privacy.policy.html
+++ b/privacy.policy.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
+    <style>body {
+            text-align: center;
+        }</style>
 <head>
     <meta charset="UTF-8">
     <title>Privacy Policy</title>
 </head>
+    <body>
 
 Privacy Policy
 Bystryan built the Plinko Red app as a Free app. This SERVICE is provided by Bystryan at no cost and is intended for use as is.
